force-app/main/default/objects/Material_Price_Inventory__c/Material_Price_Inventory__c.object-meta.xml
<CustomObject>
    <label>Material Price Inventory</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Material Price Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Price Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>