force-app/main/default/objects/Material_Price_Inventory__c/fields/API_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>API_Error_Message__c</fullName>
    <label>API Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>