force-app/main/default/objects/Material_Price_Inventory__c/fields/API_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Response_Status__c</fullName>
    <label>API Response Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>