force-app/main/default/objects/Material_Price_Inventory__c/fields/Inventory_Batch__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Batch__c</fullName>
    <label>Inventory Batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>