force-app/main/default/objects/Material_Price_Inventory__c/fields/Inventory_Plant__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Plant__c</fullName>
    <label>Inventory Plant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>