force-app/main/default/objects/Material_Price_Inventory__c/fields/Inventory_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Storage_Location__c</fullName>
    <label>Inventory Storage Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>