force-app/main/default/objects/Material_Price_Inventory__c/fields/Inventory_Unrestricted_Stock__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Unrestricted_Stock__c</fullName>
    <label>Inventory Unrestricted Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>