force-app/main/default/objects/Material_Price_Inventory__c/fields/Inventory_UoM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_UoM__c</fullName>
    <label>Inventory UoM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>