force-app/main/default/objects/Material_Price_Inventory__c/fields/Material_Master__c.field-meta.xml
<CustomField>
    <fullName>Material_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Master</label>
    <referenceTo>MD_Product2__c</referenceTo>
    <relationshipLabel>Material Price Inventories</relationshipLabel>
    <relationshipName>Material_Price_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>