force-app/main/default/objects/Material_Price_Inventory__c/fields/Price_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Price_Distribution_Channel__c</fullName>
    <label>Price Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>