force-app/main/default/objects/Material_Price_Inventory__c/fields/Price_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Price_Sales_Org__c</fullName>
    <label>Price Sales Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>