force-app/main/default/objects/Material_Price_Inventory__c/fields/Price_UoM__c.field-meta.xml
<CustomField>
    <fullName>Price_UoM__c</fullName>
    <label>Price UoM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>