force-app/main/default/objects/Material_Price_Inventory__c/fields/Price_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Price_Valid_To__c</fullName>
    <label>Price Valid To</label>
    <type>DateTime</type>
</CustomField>